Side Nav improved by adding List Icons.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,5 @@
-<p>hello world</p>
+<div id="home">
+    <div class="bg-img"></div>
+    <img class="profile-pic" src="../../assets/images/portfolio.jpg">
+    <h1>Siddharthkumar Patel</h1>
+</div>
