--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -13,3 +13,13 @@
 .navbar-links {
     justify-content: flex-end;
 }
+a {
+    text-decoration: none;
+    color: white;
+    padding: 10px 10px 10px 10px;
+}
+a:hover {
+    background-color: white;
+    color: black;
+    border-radius: 10px;
+}
