--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,3 @@
-<p>home works!</p>
+<div class="home-container">
+  <h1>Hi, I'm Siddharth and I am a recent graduate with Bachelors of Science in Computer Science.</h1>
+</div>
