--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,6 +1,16 @@
 .home-container {
   color: black;
-  height: 100%;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
+}
+
+#html-svg {
+  filter: invert(54%) sepia(71%) saturate(3950%) hue-rotate(347deg) brightness(99%) contrast(90%);
+  width: 50px;
+  height: 50px;
+}
+
+#python-svg, #angular-svg, #java-svg, #css-svg, #bootstrap-svg, #javascript-svg, #react-svg, #nodejs-svg {
+  width: 50px;
+  height: 50px;
 }
