--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,15 @@
 <div class="home-container">
-  <h1>Hi, I'm Siddharth and I am a recent graduate with Bachelors of Science in Computer Science.</h1>
+  <h1>
+    Hi👋, I'm Siddharth and I am a recent graduate with Bachelors of Science in
+    Computer Science. I love working with people and writing clean code.
+  </h1>
+  <img id="html-svg" src="../../assets/images/html5.svg" />
+  <img id="css-svg" src="../../assets/images/css.svg" />
+  <img id="python-svg" src="../../assets/images/python.svg" />
+  <img id="angular-svg" src="../../assets/images/angular.svg" />
+  <img id="bootstrap-svg" src="../../assets/images/bootstrap.svg" />
+  <img id="java-svg" src="../../assets/images/java.svg" />
+  <img id="javascript-svg" src="../../assets/images/javascript.svg" />
+  <img id="react-svg" src="../../assets/images/react.svg" />
+  <img id="nodejs-svg" src="../../assets/images/nodejs.svg" />
 </div>
