Improved introduction for the default home page.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,10 +1,10 @@
 <div class="home-container">
   <div class="intro-container">
+    <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
     <h1>
-      Hi👋, I'm <span class="name">Siddharth Patel</span>. I am a recent
-      graduate with Bachelors in Computer Science at George Mason University and
-      I love working with people and writing clean code. I have experience
-      coding in Java, Angular, and Python.
+      I'm a recent graduate with Bachelors in Computer Science from George Mason
+      University. My expertise comprises of languages such as Java, Angular, and
+      Python.
     </h1>
   </div>
 
