--- a/src/styles.css
+++ b/src/styles.css
@@ -5,9 +5,9 @@ body {
   height: 100%;
 }
 body {
-  background: linear-gradient(45deg, #b92b27, #1565C0);
-  background-size: 200%;
-  animation: gradient 15s ease infinite;
+  background: linear-gradient(45deg, #FC7864, #FDA366) fixed;
+  background-size: 200% 200%;
+  animation: gradient 10s ease infinite;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
