--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,12 +1,12 @@
 <div class="navbar">
   <mat-toolbar class="navbar-theme">
-    <a routerLink="">Siddharth</a>
+    <a routerLink="">About</a>
   </mat-toolbar>
 
   <mat-toolbar class="navbar-links">
-    <a routerLink="projects" routerLinkActive="active">Projects</a>
-    <a routerLink="about">About</a>
-    <a routerLink="contact">Contact</a>
+    <a routerLink="experience">Experience</a>
+    <a routerLink="projects" routerLinkActive="active">Portfolio</a>
+    <!-- <a routerLink="contact">Contact</a> -->
   </mat-toolbar>
   <!--Navbar-->
 </div>
