--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,23 +1,51 @@
 <div class="home-container">
-  <div class="intro-container">
-    <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
-    <h1>
-      I'm a recent graduate with Bachelors in Computer Science from George Mason
-      University. My expertise comprises of languages such as Java, Angular, and
-      Python.
-    </h1>
-  </div>
+<mat-card class="intro-container">
+  <img id="profile" src="../../assets/images/pro-pic.jpg" height="300" width="300"/>
+  <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
+  <h1>
+    I'm a recent graduate with Bachelors in Computer Science from George Mason
+    University. My expertise comprises of languages such as Java, Angular, and
+    Python.
+  </h1>
 
   <div class="skills-container">
     <h1><b>Skills</b></h1>
-    <img id="html-svg" src="../../assets/images/html5.svg" />
-    <img id="css-svg" src="../../assets/images/css.svg" />
-    <img id="python-svg" src="../../assets/images/python.svg" />
-    <img id="angular-svg" src="../../assets/images/angular.svg" />
-    <img id="bootstrap-svg" src="../../assets/images/bootstrap.svg" />
-    <img id="java-svg" src="../../assets/images/java.svg" />
-    <img id="javascript-svg" src="../../assets/images/javascript.svg" />
-    <img id="react-svg" src="../../assets/images/react.svg" />
-    <img id="nodejs-svg" src="../../assets/images/nodejs.svg" />
+    <figure>
+      <img id="html-svg" src="../../assets/images/html5.svg" />
+      <figcaption><b>HTML</b></figcaption>
+    </figure>
+    <figure>
+      <img id="css-svg" src="../../assets/images/css.svg" />
+      <figcaption><b>CSS</b></figcaption>
+    </figure>
+    <figure>
+      <img id="python-svg" src="../../assets/images/python.svg" />
+      <figcaption><b>Python</b></figcaption>
+    </figure>
+    <figure>
+      <img id="angular-svg" src="../../assets/images/angular.svg" />
+      <figcaption><b>Angular</b></figcaption>
+    </figure>
+    <figure>
+      <img id="bootstrap-svg" src="../../assets/images/bootstrap.svg" />
+      <figcaption><b>Bootstrap</b></figcaption>
+    </figure>
+    <figure>
+      <img id="java-svg" src="../../assets/images/java.svg" />
+      <figcaption><b>Java</b></figcaption>
+    </figure>
+    <figure>
+      <img id="javascript-svg" src="../../assets/images/javascript.svg" />
+      <figcaption><b>JavaScript</b></figcaption>
+    </figure>
+    <figure>
+      <img id="react-svg" src="../../assets/images/react.svg" />
+      <figcaption><b>React</b></figcaption>
+    </figure>
+    <figure>
+      <img id="nodejs-svg" src="../../assets/images/nodejs.svg" />
+      <figcaption><b>NodeJS</b></figcaption>
+    </figure>
   </div>
+</mat-card>
 </div>
