--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -1,25 +1,30 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato&display=swap");
 .navbar {
-    display: inline-block;
-    display: flex;
+  display: flex;
+  width: min(800px, 100%);
+  margin: auto;
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  overflow: hidden;
 }
-.navbar-theme, .navbar-links {
-    background-color: black;
-    font-family: 'Lato', sans-serif;
-    color: white;
-    font-size: large;
-    gap: 40px;
+.navbar-theme,
+.navbar-links {
+  background-color: black;
+  font-family: "Lato", sans-serif;
+  color: white;
+  font-size: large;
+  gap: 40px;
 }
 .navbar-links {
-    justify-content: flex-end;
+  justify-content: flex-end;
 }
 a {
-    text-decoration: none;
-    color: white;
-    padding: 10px 10px 10px 10px;
+  text-decoration: none;
+  color: white;
+  padding: 10px 10px 10px 10px;
 }
 a:hover {
-    background-color: white;
-    color: black;
-    border-radius: 10px;
+  background-color: white;
+  color: black;
+  border-radius: 10px;
 }
