--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,15 +1,23 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@900&display=swap");
 div {
   margin: auto;
-  width: min(50em, 100%);
+  width: min(800px, 100%);
   font-family: "Lato", sans-serif;
   padding-top: 1em;
 }
 
-mat-expansion-panel {
+/* mat-expansion-panel {
   margin-bottom: 1em;
 }
 
 mat-expansion-panel-header {
   font-size: 20px;
+} */
+
+mat-card {
+  margin-bottom: 1em;
+  border-radius: 0;
+}
+li {
+  font-size: 16px;
 }
