--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,6 +1,6 @@
 <div>
-  <mat-expansion-panel>
-    <mat-expansion-panel-header> Bit-Fil-A </mat-expansion-panel-header>
+  <mat-card>
+    <mat-card-title> Bit-Fil-A </mat-card-title>
     <li>
       Bit-Fil-A is an Angular based, CRUD (Create, Read, Update, Delete)
       application.
@@ -9,11 +9,11 @@
       The app consists of a navigation bar with valuable information about the
       product(s) such as:
       <ul>
-        <li>A <B>Menu</B> to browse through multiple food options</li>
-        <li>A <B>Shopping Cart</B> to add/remove items to be purchased</li>
-        <li>A <B>Support</B> page to allow customers to review the app.</li>
+        <li>A <i>Menu</i> to browse through multiple food options</li>
+        <li>A <i>Shopping Cart</i> to add/remove items to be purchased</li>
+        <li>A <i>Support</i> page to allow customers to review the app.</li>
         <li>
-          An <b>About</b> page consisting of a short introduction regarding
+          An <i>About</i> page consisting of a short introduction regarding
           Bit-Fil-A.
         </li>
       </ul>
@@ -27,12 +27,10 @@
       toggled on/off, and view/hide details button to learn more about a
       sandwich.
     </li>
-  </mat-expansion-panel>
+  </mat-card>
 
-  <mat-expansion-panel>
-    <mat-expansion-panel-header
-      >Convolutions Fourier Resizing</mat-expansion-panel-header
-    >
+  <mat-card>
+    <mat-card-title>Convolutions Fourier Resizing</mat-card-title>
     <li>
       CFR is a project about manipulating images using different algorithms
       using image filters to process images.
@@ -52,12 +50,10 @@
       and bicubic functions to interpolate between discrete pixel values to
       allow myself to convert a small image to larger one.
     </li>
-  </mat-expansion-panel>
+  </mat-card>
 
-  <mat-expansion-panel>
-    <mat-expansion-panel-header
-      >Breadth-First Search</mat-expansion-panel-header
-    >
+  <mat-card>
+    <mat-card-title>Breadth-First Search</mat-card-title>
     <li>
       Breath-First Search is my first large scale project composed of
       complicated algorithms which came accross as hurdles to be overcomed by
@@ -75,5 +71,5 @@
       application is capable of generating a dynamic graph whilst returning the
       desired shortest path from point A to B.
     </li>
-  </mat-expansion-panel>
+  </mat-card>
 </div>
