--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,10 +2,9 @@
 <mat-card class="intro-container">
   <img id="profile" src="../../assets/images/pro-pic.jpg" height="300" width="300"/>
   <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
-  <h1>
+  <h1 id="description">
     I'm a recent graduate with Bachelors in Computer Science from George Mason
-    University. My expertise comprises of languages such as Java, Angular, and
-    Python.
+    University.
   </h1>
 
   <div class="skills-container">
