Major changes to improve the looks of the portfolio are in place.

--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -1,9 +1,7 @@
 mat-card {
-  margin: auto;
-  width: min(769px, 100%);
   font-family: "Lato", sans-serif;
   margin-bottom: 1em;
-  border-radius: 0;
+  position: static;
 }
 li {
   font-size: 16px;
