--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,10 +1,12 @@
 <div class="navbar">
-  <mat-toolbar class="navbar-theme">
-    <a routerLink="">About</a>
-  </mat-toolbar>
+  <div class="navigation-container">
+    <mat-toolbar>
+      <a routerLink="">About</a>
+    </mat-toolbar>
 
-  <mat-toolbar class="navbar-links">
-    <a routerLink="experience">Experience</a>
-  </mat-toolbar>
+    <mat-toolbar>
+      <a routerLink="experience">Experience</a>
+    </mat-toolbar>
+  </div>
+  <router-outlet routerLinkActive="active"></router-outlet>
 </div>
-<router-outlet></router-outlet>
