Forgot to add typescript in web development skills, so just added that.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -39,6 +39,10 @@
         <img src="../../assets/images/react.svg" />
         <figcaption><b>React</b></figcaption>
       </figure>
+      <figure>
+        <img src="../../assets/images/typescript.svg" />
+        <figcaption><b>TypeScript</b></figcaption>
+      </figure>
     </div>
     <!-- Web Development End -->
     <div>
@@ -64,7 +68,7 @@
         <figcaption><b>NodeJS</b></figcaption>
       </figure>
     </div>
-
+    <!-- Back-end Ends -->
     <div>
       <h2>Others</h2>
       <figure>
