--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
     height="300"
     width="300"
   />
-  <h1>Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
+  <h1 id="introduction">Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
   <h1 id="description">
     I'm a recent graduate with Bachelors in Computer Science from George Mason
     University.
@@ -81,7 +81,7 @@
       </figure>
     </div>
 
-    <h1>Interested in working with me?</h1>
+    <h1 id="interest">Interested in working with me?</h1>
     <a [href]="contactMe" class="contact">Contact Me!</a>
   </div>
 </div>
