--- a/src/app/toggle-switch/toggle-switch.component.html
+++ b/src/app/toggle-switch/toggle-switch.component.html
@@ -1,2 +1,6 @@
-<input type="checkbox" id="check" class="toggle">
+<input
+  type="checkbox"
+  id="check"
+  class="toggle"
+/>
 <label for="check"></label>
