--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,4 @@
-<app-toggle-switch></app-toggle-switch>
-<app-home></app-home>
+<div>
+  <app-toggle-switch></app-toggle-switch>
+  <app-home></app-home>
+</div>
