Dark theme configured

--- a/src/app/home/dark-theme/dark-theme.component.html
+++ b/src/app/home/dark-theme/dark-theme.component.html
@@ -82,6 +82,6 @@
     </div>
 
     <h1 id="interest">Interested in working with me?</h1>
-    <a [href]="contactMe" class="contact">Contact Me!</a>
+    <p><a [href]="contactMe" class="contact">Contact Me!</a></p>
   </div>
 </div>
