--- a/src/app/home/dark-theme/dark-theme.component.css
+++ b/src/app/home/dark-theme/dark-theme.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  background-color: black;
 }
 .skills-container img {
   width: 50px;
@@ -17,6 +18,7 @@
 .skills-container,
 h1 {
   text-align: center;
+  color: white;
 }
 
 h1 {
