--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,3 @@
+<app-toggle-switch></app-toggle-switch>
 <app-light-theme *ngIf="darkMode == false"></app-light-theme>
 <app-dark-theme *ngIf="darkMode == true"></app-dark-theme>
