Added 2 rems padding to the top and bottom of home component for improved visibility.

--- a/src/app/home/dark-theme/dark-theme.component.css
+++ b/src/app/home/dark-theme/dark-theme.component.css
@@ -3,6 +3,7 @@
   flex-direction: column;
   align-items: center;
   background-color: black;
+  padding: 2rem 0 2rem 0;
 }
 .skills-container img {
   width: 50px;
@@ -30,7 +31,7 @@ h1 {
   padding: 20px;
   margin: 10px;
   border-radius: 10px;
-  box-shadow: 0 0 5px 5px rgba(85, 85, 85, 0.2);
+  box-shadow: 0 0 5px 5px rgba(255, 255, 255, 0.2);
 }
 #introduction {
   margin-top: 2rem;
