--- a/src/app/home/dark-theme/dark-theme.component.html
+++ b/src/app/home/dark-theme/dark-theme.component.html
@@ -76,7 +76,7 @@
         <figcaption><b>Heroku</b></figcaption>
       </figure>
       <figure>
-        <img src="../../assets/images/github.svg" />
+        <img src="../../assets/images/Octocat.png" />
         <figcaption><b>GitHub</b></figcaption>
       </figure>
     </div>
