--- a/src/app/home/light-theme/light-theme.component.css
+++ b/src/app/home/light-theme/light-theme.component.css
@@ -2,6 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 2rem 0 2rem 0;
 }
 .skills-container img {
   width: 50px;
