--- a/src/app/toggle-switch/toggle-switch.component.css
+++ b/src/app/toggle-switch/toggle-switch.component.css
@@ -2,15 +2,12 @@ input[type="checkbox"].toggle {
   opacity: 0;
   cursor: pointer;
   position: absolute;
-  top: -1000;
-  left: -1000;
 }
 
 input[type="checkbox"].toggle + label {
   display: flex;
   align-items: center;
-  position: relative;
-  /* display: none; */
+  position: fixed;
   cursor: pointer;
 }
 
@@ -45,13 +42,4 @@ input[type="checkbox"].toggle:checked + label::after {
 input[type="checkbox"].toggle:checked + label::before {
   background-color: white;
   transition: all 0.5s;
-}
-
-/* + means get the element that is directly after the input tag. */
-input[type="checkbox"].toggle:checked + label {
-  color: red;
-}
-
-input[type='checkbox'].toggle:focus + label::before {
-  outline: 1px solid red;
 }
