--- a/src/app/toggle-switch/toggle-switch.component.css
+++ b/src/app/toggle-switch/toggle-switch.component.css
@@ -8,6 +8,7 @@ input[type="checkbox"].toggle + label {
   display: flex;
   align-items: center;
   position: fixed;
+  right: 10px;
   cursor: pointer;
 }
 
