Toggle's input button is no longer displayed on the UI and only the label is available which will be clickable

--- a/src/app/toggle-switch/toggle-switch.component.css
+++ b/src/app/toggle-switch/toggle-switch.component.css
@@ -1,7 +1,9 @@
 input[type="checkbox"].toggle {
   opacity: 0;
   cursor: pointer;
-  position: absolute;
+  position: fixed;
+  display: none;
+  right: 10px;
 }
 
 input[type="checkbox"].toggle + label {
