--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,11 @@
-<p>navbar works!</p>
+<nav>
+  <ul>
+    <li>
+      <a href="#portfolio">Portfolio</a>
+    </li>
+    <li class="last">
+      <a href="#experience">Experience</a>
+    </li>
+  </ul>
+  <app-toggle-switch></app-toggle-switch>
+</nav>
