--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -3,27 +3,23 @@ nav {
   display: flex;
   align-items: center;
   top: 0;
-  /* background-color: #90C3C8; */
-  background-color: #6C91BF;
+  background-color: #90C3C8;
+  /* background-color: #6c91bf; */
   height: 3rem;
 }
 
-ul {
-  list-style: none;
+nav a {
+  padding: 1rem;
+  font-size: 1.2rem;
   font-family: Segoe UI;
-  font-size: 14pt;
-}
-
-li {
-  display: inline;
-  padding-right: 20%;
-}
-
-li.last {
-  padding: 0;
-  margin: 0;
-}
-
-a {
   text-decoration: none;
+  color: black;
+}
+
+nav a:hover {
+  color: white;
+  padding: 8px;
+  margin: 8px;
+  background-color: black;
+  border-radius: 10px;
 }
