Added styles to root and removed two different theming components

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+
+body {
+  --text-color:black;
+  --bkg-color: #fff;
+  --contact-bkg-color: black;
+  --contact-text-color: white;
+}
+body.dark-theme {
+  --text-color: #eee;
+  --bkg-color: black;
+  --contact-bkg-color: white;
+  --contact-text-color: black;
+}
+
 body {
   height: 100%;
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
+}
+
+body {
+  background: var(--bkg-color);
 }
