--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
   <div class="skills-container">
     <h1><b>Skills</b></h1>
     <div>
-      <h2>Web Development</h2>
+      <h2>Front-End</h2>
       <figure>
         <img src="../../assets/images/html5.svg" />
         <figcaption><b>HTML</b></figcaption>
