Added projects section & experience section with a timeline style. Added a scroll bar to show how much of the UI user has scrolled through.

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,5 @@
 <app-navbar id="portfolio"></app-navbar>
 <app-home></app-home>
+<app-projects></app-projects>
 <app-experience></app-experience>
+<app-footer></app-footer>
