--- a/src/app/experience/experience.component.html
+++ b/src/app/experience/experience.component.html
@@ -1,15 +1,28 @@
 <section id="experience">
-  <ul>
-    <li>
-      <h1>Technology Analyst</h1>
-      <h2>Freddie Mac</h2>
-      <span>July 2022 - Current</span>
-    </li>
-    <li>
-      <h1>Associate Software Engineer</h1>
-      <h2>MindGrub</h2>
-      <span>June 2021 - September 2021</span>
-      <p>I developed an onboarding experience to get to know your immediate team and everyday work management tool through an MVP called Hoos Hoo.</p>
-    </li>
-  </ul>
+  <h1>Experience</h1>
+  <div class="box-area">
+    <div class="custom"></div>
+    <div class="box-date">
+      <span>2022</span>
+    </div>
+    <div class="box-text">
+      <h2>Technology Analyst</h2>
+      <h3>Freddie Mac</h3>
+      <p>I worked on an Angular-based ledger app designed to teach Freddie Mac testing best practices through tools such as selenium, cypress, and playwright.</p>
+      <p>Angular, Java, Selenium</p>
+    </div>
+  </div>
+
+  <div class="box-area box-right">
+    <div class="custom"></div>
+    <div class="box-date">
+      <span>2021</span>
+    </div>
+    <div class="box-text">
+      <h2>Associate Software Engineer</h2>
+      <h3>MindGrub</h3>
+      <p>I designed an MVP for Hoos Hoo - an HR management application that allows employees to learn about their colleagues through gamified onboarding experience.</p>
+      <p>React, Sass, Drupal CMS, PostMan</p>
+    </div>
+  </div>
 </section>
