--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,11 +5,12 @@
     height="300"
     width="300"
   />
-  <h1 id="introduction">Hi👋, I'm <span class="name">Siddharth Patel</span>.</h1>
+  <h1 id="introduction">
+    Hi👋, I'm <span class="name">Siddharth Patel</span>.
+  </h1>
   <h1 id="description">
     I am a graduate with Bachelors in Computer Science from George Mason
-    University.
-    I consider myself a self-taught full stack developer with 1+ years of experience in creating beautiful websites with an expertise in Angular developement.
+    University with close to 2 years worth of experience in Full Stack development.
   </h1>
 
   <div class="skills-container">
@@ -18,31 +19,31 @@
       <h2>Front-End</h2>
       <figure>
         <img src="../../assets/images/html5.svg" />
-        <figcaption><b>HTML</b></figcaption>
+        <figcaption>HTML</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/css.svg" />
-        <figcaption><b>CSS</b></figcaption>
+        <figcaption>CSS</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/angular.svg" />
-        <figcaption><b>Angular</b></figcaption>
+        <figcaption>Angular</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/javascript.svg" />
-        <figcaption><b>JavaScript</b></figcaption>
+        <figcaption>JavaScript</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/bootstrap.svg" />
-        <figcaption><b>Bootstrap</b></figcaption>
+        <figcaption>Bootstrap</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/react.svg" />
-        <figcaption><b>React</b></figcaption>
+        <figcaption>React</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/typescript.svg" />
-        <figcaption><b>TypeScript</b></figcaption>
+        <figcaption>TypeScript</figcaption>
       </figure>
     </div>
     <!-- Web Development End -->
@@ -50,23 +51,23 @@
       <h2>Back-end</h2>
       <figure>
         <img src="../../assets/images/python.svg" />
-        <figcaption><b>Python</b></figcaption>
+        <figcaption>Python</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/java.svg" />
-        <figcaption><b>Java</b></figcaption>
+        <figcaption>Java</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/mongodb.svg" />
-        <figcaption><b>MongoDB</b></figcaption>
+        <figcaption>MongoDB</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/firebase.svg" />
-        <figcaption><b>Firebase</b></figcaption>
+        <figcaption>Firebase</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/nodejs.svg" />
-        <figcaption><b>NodeJS</b></figcaption>
+        <figcaption>NodeJS</figcaption>
       </figure>
     </div>
     <!-- Back-end Ends -->
@@ -74,15 +75,12 @@
       <h2>Others</h2>
       <figure>
         <img src="../../assets/images/heroku.svg" />
-        <figcaption><b>Heroku</b></figcaption>
+        <figcaption>Heroku</figcaption>
       </figure>
       <figure>
         <img src="../../assets/images/Octocat.png" />
-        <figcaption><b>GitHub</b></figcaption>
+        <figcaption>GitHub</figcaption>
       </figure>
     </div>
-
-    <h1 id="interest">Interested in working with me?</h1>
-    <p><a [href]="contactMe" class="contact">Contact Me!</a></p>
   </div>
 </div>
