--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,7 @@
-<nav>
-    <a href="#portfolio">Portfolio</a>
-    <a href="#experience">Experience</a>
+<nav class="navbar">
+  <a href="#portfolio">Portfolio</a>
+  <a href="#projects">Projects</a>
+  <a href="#experience">Experience</a>
   <app-toggle-switch></app-toggle-switch>
 </nav>
+<div id="scrollBar"></div>
