--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -5,6 +5,7 @@
 }
 a {
   text-decoration: none;
+  cursor: pointer;
 }
 ul {
   list-style: none;
@@ -67,7 +68,7 @@ ul {
   margin: 20px;
 }
 .project-box > img {
-  width:  100%;
+  width: 100%;
   height: 100%;
   overflow: hidden;
   borcder-radius: 5px;
