--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -7,23 +7,23 @@
   <ul class="project-filter">
     <li class="list" id="project-filter-active" data-filter="all">All</li>
     <li class="list" data-filter="app">Application</li>
-    <li class="list" data-filter="design">App Design</li>
-    <li class="list" data-filter="web">Website Design</li>
+    <!-- <li class="list" data-filter="design">App Design</li> -->
+    <!-- <li class="list" data-filter="web">Website Design</li> -->
     <li class="list" data-filter="ai">AI</li>
   </ul>
 
   <div class="project-container">
-    <a href="" class="project-box app">
-      <img src="../../assets/images/Octocat.png">
+    <a class="project-box app">
+      <img src="../../assets/images/Octocat.png" />
     </a>
-    <a href="" class="project-box design">
-      <img src="../../assets/images/Octocat.png">
+    <a class="project-box design">
+      <img src="../../assets/images/Octocat.png" />
     </a>
-    <a href="" class="project-box web">
-      <img src="../../assets/images/Octocat.png">
+    <a class="project-box web">
+      <img src="../../assets/images/Octocat.png" />
     </a>
-    <a href="" class="project-box ai">
-      <img src="../../assets/images/Octocat.png">
+    <a class="project-box ai">
+      <img src="../../assets/images/Octocat.png" />
     </a>
   </div>
 </section>
