--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -5,8 +5,7 @@
   </header>
 
   <ul class="project-filter">
-    <li class="list" id="project-filter-active" data-filter="all">All</li>
-    <li class="list" data-filter="app">Application</li>
+    <li class="list" id="project-filter-active" data-filter="app">Application</li>
     <!-- <li class="list" data-filter="design">App Design</li> -->
     <!-- <li class="list" data-filter="web">Website Design</li> -->
     <li class="list" data-filter="ai">AI</li>
@@ -14,16 +13,19 @@
 
   <div class="project-container">
     <a class="project-box app">
-      <img src="../../assets/images/Octocat.png" />
+      <img src="../../assets/images/Bit-Fil-A.png" />
     </a>
-    <a class="project-box design">
-      <img src="../../assets/images/Octocat.png" />
+    <a class="project-box app">
+      <img src="../../assets/images/Post-It.png" />
     </a>
-    <a class="project-box web">
+    <!-- <a class="project-box design">
       <img src="../../assets/images/Octocat.png" />
-    </a>
-    <a class="project-box ai">
+    </a> -->
+    <!-- <a class="project-box web">
       <img src="../../assets/images/Octocat.png" />
-    </a>
+    </a> -->
+    <!-- <a class="project-box ai">
+      <img src="../../assets/images/Octocat.png" />
+    </a> -->
   </div>
 </section>
