Updated project section with a simple list of projects and a button that will renavigate to Github repositories.

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -10,7 +10,7 @@
   </h1>
   <h1 id="description">
     I am a graduate with Bachelors in Computer Science from George Mason
-    University with close to 2 years worth of experience in Full Stack development.
+    University with close to 2 years of experience in Full Stack development.
   </h1>
 
   <div class="skills-container">
