--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -1,5 +1,4 @@
 * {
-  text-align: center;
   margin: 0;
   padding: 0;
 }
@@ -21,6 +20,7 @@ ul {
   margin-top: 20px;
   display: flex;
   flex-direction: column;
+  text-align: center;
 }
 .project-heading > h3 {
   font-size: 2.7rem;
@@ -62,14 +62,27 @@ ul {
   margin: auto;
 }
 .project-box {
-  width: 330px;
-  padding: 15px;
-  border: 1px solid #eeeeee;
-  margin: 20px;
+  width: 350px;
+  padding: 10px;
+  background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
+    margin: 20px;
 }
-.project-box > img {
+.project-box img {
   width: 100%;
   height: 100%;
   overflow: hidden;
+}
+button {
+  color: var(--text-color);
+  padding: 0.8rem;
+  font-size: 14px;
+  text-transform: uppercase;
   border-radius: 5px;
+  width: 100%;
+  cursor: pointer;
+  border: 1px solid rgba(255, 255, 255, 0.5);
+  background: transparent;
+}
+button:hover {
+  background-color: rgba(255, 255, 255, 0.3);
 }
