Included projects with short description in the Projects tab

--- a/src/app/experience/experience.component.css
+++ b/src/app/experience/experience.component.css
@@ -48,8 +48,8 @@ h1 {
   color: #fff;
   order: 3;
   width: 80%;
-  background: #d7b377;
-  /* background-color: #AD7A99; */
+  /* background: #d7b377; */
+  background-color: #63e6be;
   margin-bottom: 3%;
 }
 .box-text h2 {
