--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -21,7 +21,10 @@
         Bit-Fil-A is an angular-based CRUD application consisting of a menu &
         shopping cart.
       </p>
-      <button (click)="bitFilAClick()">read more</button>
+      <button (click)="bitFilAClick()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
     </div>
     <div class="project-box app">
       <img src="../../assets/images/Post-It.png" />
@@ -30,7 +33,47 @@
         Post-It is a simple MEAN Stack application that allows users to add
         public notes with images.
       </p>
-      <button (click)="openPostIt()">read more</button>
+      <button (click)="openPostIt()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
+    </div>
+    <div class="project-box ai">
+      <img src="../../assets/images/gradient-magnitude.png" />
+      <h1>Filters, Fourier Transforms, & Image Pyramids</h1>
+      <p>
+        This project is a variety of filter generation and application on images
+        such as Gaussian blurs being one of them.
+      </p>
+      <button (click)="openFilters()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
+    </div>
+    <div class="project-box ai">
+      <img src="../../assets/images/blob-detection.png" />
+      <h1>Blob Detection</h1>
+      <p>
+        Blob detection uses Harris Corners algorithm to detect corners in an
+        image.
+      </p>
+      <button (click)="openBlob()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
+    </div>
+    <div class="project-box ai">
+      <img src="../../assets/images/matching-pipeline.png" />
+      <h1>Matching Pipeline</h1>
+      <p>
+        In this project, I take two, same images with different orientation and
+        try to detect features on them to find out how similar these two images
+        are to one another.
+      </p>
+      <button (click)="openMatchingPipeline()">
+        <p>GitHub</p>
+        <img src="../../assets/images/arrow-up-right-from-square-solid.svg" />
+      </button>
     </div>
     <!-- <a class="project-box design">
       <img src="../../assets/images/Octocat.png" />
