--- a/src/app/projects/projects.component.css
+++ b/src/app/projects/projects.component.css
@@ -64,15 +64,20 @@ ul {
 .project-box {
   width: 350px;
   padding: 10px;
-  background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%);
-    margin: 20px;
+  /* background: linear-gradient(to bottom left, #ef8d9c 40%, #ffc39e 100%); */
+  background-color: #ff85a1;
+  margin: 20px;
 }
-.project-box img {
+.project-box > img {
   width: 100%;
   height: 100%;
   overflow: hidden;
 }
 button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 10px;
   color: var(--text-color);
   padding: 0.8rem;
   font-size: 14px;
