--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,7 +1,9 @@
 <nav class="navbar">
-  <a href="#portfolio">Portfolio</a>
-  <a href="#projects">Projects</a>
-  <a href="#experience">Experience</a>
+  <div class="titles">
+    <a href="#portfolio">Portfolio</a>
+    <a href="#projects">Projects</a>
+    <a href="#experience">Experience</a>
+  </div>
   <app-toggle-switch></app-toggle-switch>
+  <div id="scrollBar"></div>
 </nav>
-<div id="scrollBar"></div>
