--- a/src/app/navbar/navbar.component.css
+++ b/src/app/navbar/navbar.component.css
@@ -2,7 +2,8 @@
   display: flex;
   justify-content: space-around;
   align-items: center;
-  position: fixed;
+  position: sticky;
+  top: 0;
   width: 100%;
   background-color: #74c0fc;
   z-index: 100;
